tsconfigs are now proper dotfiles

--- a/shared/.tsconfig.jsonc
+++ b/shared/.tsconfig.jsonc
@@ -39,8 +39,7 @@
         "esModuleInterop": true,
         "importHelpers": true,
         // "importsNotUsedAsValues": "preserve",
-        "removeComments": true,
-
+        "removeComments": true
     },
 
     "exclude": [
