Fixed tsconfig exclusions

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,5 +18,9 @@
         "**/*.tsx",
         "**/*.js",
         "**/*.jsx"
+    ],
+    "exclude": [
+        "node_modules/**",
+        "dist/**",
     ]
 }
