--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -8,6 +8,8 @@
         "src/polyfills.ts"
     ],
     "exclude": [
+        "node_modules/**",
+        "dist/**",
         "**/*.spec.*",
         "**/*.prod.*"
     ]
