--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,10 @@
         "**/*.js",
         "**/*.jsx"
     ],
+    "exclude": [
+        "node_modules/**",
+        "dist/**"
+    ],
 
     "angularCompilerOptions": {
         "fullTemplateTypeCheck": true,
