--- a/backend/tsconfig.app.json
+++ b/backend/tsconfig.app.json
@@ -1,6 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "exclude": [
+        "node_modules/**",
+        "dist/**",
         "**/*.spec.*"
     ]
 }
