--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,7 @@
     ],
 
     "angularCompilerOptions": {
+        "disableTypeScriptVersionCheck": true,
         "fullTemplateTypeCheck": true,
         "strictInjectionParameters": true
     }
