Tweak paths in tsconfigs

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -4,12 +4,17 @@
         "node"
     ],
     "files": [
-        "src/main.ts",
-        "src/polyfills.ts"
+        "./src/main.ts",
+        "./src/polyfills.ts"
+    ],
+    "include": [
+        "./**/*.ts",
+        "./**/*.js"
     ],
     "exclude": [
         "node_modules/**",
         "dist/**",
+        "**/*.min.*",
         "**/*.spec.*",
         "**/*.prod.*"
     ]
