--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,8 +3,8 @@
 
     "compilerOptions": {
 
-        "baseUrl": "src",
-        "outDir": "dist/tsc",
+        "baseUrl": "./src",
+        "outDir": "./dist/tsc",
 
         "lib": [
             "ESNext",
@@ -16,10 +16,10 @@
     },
 
     "include": [
-        "**/*.ts",
-        "**/*.tsx",
-        "**/*.js",
-        "**/*.jsx"
+        "./**/*.ts",
+        "./**/*.tsx",
+        "./**/*.js",
+        "./**/*.jsx"
     ],
     "exclude": [
         "node_modules/**",
