--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,30 +30,31 @@
     "start": "npx ng serve"
   },
   "engines": {
+    "node": "^14",
     "npm": "^6"
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": ">=0.900 <0.1000",
+    "@angular-devkit/build-angular": ">=0.1000 <0.1100",
     "@angular-eslint/builder": "latest",
     "@angular-eslint/eslint-plugin": "latest",
     "@angular-eslint/eslint-plugin-template": "latest",
     "@angular-eslint/template-parser": "latest",
-    "@angular/animations": "^9",
-    "@angular/cdk": "^9",
-    "@angular/cli": "^9",
-    "@angular/common": "^9",
-    "@angular/compiler": "^9",
-    "@angular/compiler-cli": "^9",
-    "@angular/core": "^9",
-    "@angular/forms": "^9",
-    "@angular/language-service": "^9",
-    "@angular/material": "^9",
-    "@angular/platform-browser": "^9",
-    "@angular/platform-browser-dynamic": "^9",
-    "@angular/router": "^9",
+    "@angular/animations": "^10",
+    "@angular/cdk": "^10",
+    "@angular/cli": "^10",
+    "@angular/common": "^10",
+    "@angular/compiler": "^10",
+    "@angular/compiler-cli": "^10",
+    "@angular/core": "^10",
+    "@angular/forms": "^10",
+    "@angular/language-service": "^10",
+    "@angular/material": "^10",
+    "@angular/platform-browser": "^10",
+    "@angular/platform-browser-dynamic": "^10",
+    "@angular/router": "^10",
     "@types/lodash": "^4",
-    "@types/node": "^12",
+    "@types/node": "^14",
     "@types/webpack-env": "^1",
     "@typescript-eslint/eslint-plugin": "^2",
     "@typescript-eslint/parser": "^2",
