--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,14 +53,14 @@
     "@angular/platform-browser": "^10",
     "@angular/platform-browser-dynamic": "^10",
     "@angular/router": "^10",
-    "@types/lodash": "^4",
+    "@types/lodash-es": "^4",
     "@types/node": "^14",
     "@types/webpack-env": "^1",
     "@typescript-eslint/eslint-plugin": "^2",
     "@typescript-eslint/parser": "^2",
     "codelyzer": "^5",
     "eslint": "^6",
-    "lodash": "^4",
+    "lodash-es": "^4",
     "rxjs": "^6",
     "ts-node": "^8",
     "tslib": "^1",
