--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -52,8 +52,8 @@
                     "configurations": {
                         "production": {
                             "fileReplacements": [{
-                                "replace": "src/env/env.ts",
-                                "with": "src/env/env.prod.ts"
+                                "replace": "src/config/env/env.const.ts",
+                                "with": "src/config/env/env.const.prod.ts"
                             }],
                             "budgets": [{
                                 "type": "initial",
