Added `marked` for markdown parsing

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "@angular/platform-browser-dynamic": "^10",
     "@angular/router": "^10",
     "@types/lodash-es": "^4",
+    "@types/marked": "^1",
     "@types/node": "^14",
     "@types/webpack-env": "^1",
     "@typescript-eslint/eslint-plugin": "^2",
@@ -61,6 +62,7 @@
     "codelyzer": "^5",
     "eslint": "^6",
     "lodash-es": "^4",
+    "marked": "^1",
     "ngx-device-detector": "^2",
     "rxjs": "^6",
     "ts-node": "^8",
