Created an example file, and excluding examples from TS compilations

--- a/backend/tsconfig.app.json
+++ b/backend/tsconfig.app.json
@@ -3,6 +3,9 @@
     "exclude": [
         "node_modules/**",
         "dist/**",
-        "**/*.spec.*"
+        "**/*.min.*",
+        "**/*.spec.*",
+        "**/*.prod.*",
+        "**/*.example.*"
     ]
 }
