--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -16,6 +16,7 @@
         "dist/**",
         "**/*.min.*",
         "**/*.spec.*",
-        "**/*.prod.*"
+        "**/*.prod.*",
+        "**/*.example.*"
     ]
 }
