Added Angular's newish "strictTemplates" option

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -29,6 +29,7 @@
     "angularCompilerOptions": {
         "disableTypeScriptVersionCheck": true,
         "fullTemplateTypeCheck": true,
+        "strictTemplates": true,
         "strictInjectionParameters": true
     }
 }
