--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
   "type": "commonjs",
   "main": "./src/main.ts",
   "scripts": {
-    "postinstall": "npm rebuild && npm dedupe",
+    "//postinstall": "npm rebuild && npm dedupe",
+    "postinstall": "npm dedupe",
     "relock": "rm -rf node_modules && rm -f npm-shrinkwrap.json && npm install && npm shrinkwrap",
     "format": "npx prettier --write \"**/*.{js,ts}\"",
     "lint": "npx eslint \"**/*.{js,ts}\"",
@@ -36,7 +37,7 @@
   },
   "engines": {
     "node": "^14",
-    "npm": "^6"
+    "npm": "^7"
   },
   "dependencies": {
     "@nestjs/common": "^7",
