Fixed a compilation error for both *ends

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,7 +12,12 @@
         ],
         "types": [
             "webpack-env"
-        ]
+        ],
+
+        // Without these, Angular throws an error.
+        "declaration": false,
+        "declarationMap": false,
+        "composite": false
     },
 
     "include": [
