--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "Theodia",
     "website"
   ],
-  "homepage": "https://theodia.tech",
+  "homepage": "https://aethodia.org",
   "bugs": "https://GitHub.com/TheodiaGov/Website/issues",
   "repository": {
     "type": "git",
