--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@theodia/frontend",
+  "name": "@aethodia/frontend",
   "version": "0.0.0",
   "license": "SEE LICENSE IN ../COPYRIGHT.TXT",
-  "description": "The frontend for the national website of the Technocratic Republic of Theodia",
+  "description": "The frontend for the national website of the Technocratic Republic of Aethodia",
   "keywords": [
     "micronation",
-    "Theodia",
+    "Aethodia",
     "website"
   ],
   "homepage": "https://aethodia.org",
-  "bugs": "https://GitHub.com/TheodiaGov/Website/issues",
+  "bugs": "https://GitHub.com/AethodiaGov/Website/issues",
   "repository": {
     "type": "git",
-    "url": "https://GitHub.com/TheodiaGov/Website"
+    "url": "https://GitHub.com/AethodiaGov/Website"
   },
   "private": true,
   "directories": {
